Secure tomcat container working.